fixed gap between videos in horizontal scroll on the homepage

--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -63,6 +63,7 @@
     max-width:200px
     margin: 0 10px 0 0
     text-align:left
+    overflow:hidden
     .itemImage
       width: 100%
       white-space:nowrap
